@@ -31,6 +31,7 @@
 	$tblprefix 	= "family_";
 	$style		= "styles/default.css.php";				// See styles directory for options
 	$lang		= "lang/en-uk.inc.php";					// Translations welcome!
+	$timing		= true;									// Wether we want execution time
 
 //=====================================================================================================================
 // Change tracking details
@@ -46,6 +47,12 @@
 //=====================================================================================================================
 // Nothing should need changing beneath this line
 //=====================================================================================================================
+
+//=====================================================================================================================
+// Get the current time for tracking execution
+//=====================================================================================================================
+
+	$starttime = array_sum(explode(' ',microtime()));
 
 //=====================================================================================================================
 // Send a few headers
